<?xml version="1.0"?>
<package>
  <name>baxter_cppkdl</name>
  <version>1.0.0</version>
  <description>The baxter_cppkdl package</description>
  <maintainer email="sslf@foxmail.com">Xiaowen Ying</maintainer>
  <maintainer email="ybfan910@163.com">Yubo Fan</maintainer>
  <license>GNU</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>

  </export>
</package>
